# OmniVoice-Studio

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  api.py  backend.spec  benchmark.py  docker-compose.yml  get_langs.py  install.sh  mcp.json  package-lock.json  package.json  pyproject.toml  take_screenshot.py  test_parse.js  turbo.json  ui.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: main.py  mcp_server.py
backend/api/: schemas.py
backend/api/routers/: batch.py  capture.py  capture_ws.py  dub_core.py  dub_export.py  dub_generate.py  dub_translate.py  engines.py  exports.py  gallery.py  generation.py  marketplace.py  openai_compat.py  profiles.py  projects.py  setup.py  setup.py.bak  system.py  tools.py  tts_stream.py
backend/config/: models.yaml
backend/core/: config.py  db.py  onboarding.py  personalities.py  prefs.py  tasks.py
backend/schemas/: requests.py
backend/services/: asr_backend.py  audio_dsp.py  dub_pipeline.py  ffmpeg_utils.py  incremental.py  llm_backend.py  model_manager.py  segmentation.py  speaker_clone.py  speech_rate.py  translation_engines.py  translator.py  tts_backend.py
backend/tests/: test_capture_ws.py
backend/utils/: hf_progress.py
deploy/: Dockerfile  docker-compose.yml
docs/: DESKTOP_RELEASE.md  RELEASING.md  STRUCTURE.md  desktop-build.md
docs/specs/: studio-v1.md
frontend/: index.html  package.json  parse_jsx.py  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css  languages.json  main-app.jsx  main.jsx
frontend/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
frontend/src-tauri/binaries/: .gitignore
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: backend.rs  bootstrap.rs  commands.rs  config.rs  lib.rs  tools.rs
frontend/src/api/: batch.ts  client.js  client.ts  dub.js  dub.ts  engines.ts  exports.js  exports.ts  gallery.ts  generate.js  generate.ts  glossary.ts  hooks.ts  profiles.js  profiles.ts  projects.js  projects.ts  setup.ts  system.js  system.ts  types.ts
frontend/src/components/: AudioTrimmer.jsx  BatchAddDialog.css  BatchAddDialog.jsx  BootstrapSplash.css  BootstrapSplash.jsx  CaptureButton.css  CaptureButton.jsx  CaptureWidget.css  CaptureWidget.jsx  CheckpointBanner.jsx  CompareModal.css  CompareModal.jsx  DirectionDialog.jsx  DubSegmentRow.css  DubSegmentRow.jsx  DubSegmentTable.jsx  ErrorBoundary.jsx  ExportModal.css  ExportModal.jsx  FloatingPill.css  FloatingPill.jsx  GlossaryPanel.css  GlossaryPanel.jsx  Header.jsx  KeyboardCheatsheet.css  KeyboardCheatsheet.jsx  LogsFooter.css  LogsFooter.jsx  Misc.css  MultiLangPicker.css  MultiLangPicker.jsx  NavRail.jsx  NotificationPanel.jsx  ReadinessChecklist.css  ReadinessChecklist.jsx  SearchableSelect.jsx  Sidebar.css  Sidebar.jsx  VoicePreview.css  VoicePreview.jsx  (+2 more)
frontend/src/hooks/: useRealtimeEvents.js  useRecording.js  useSegmentEditing.js
frontend/src/i18n/: index.ts
frontend/src/pages/: BatchQueue.css  BatchQueue.jsx  CloneDesignTab.css  CloneDesignTab.jsx  DonatePage.css  DonatePage.jsx  DubTab.css  DubTab.jsx  EnterprisePage.css  EnterprisePage.jsx  Launchpad.jsx  Projects.css  Projects.jsx  Settings.css  Settings.jsx  SetupWizard.css  SetupWizard.jsx  ToolsPage.css  ToolsPage.jsx  Transcriptions.jsx  VoiceGallery.jsx  VoiceProfile.css  VoiceProfile.jsx
frontend/src/store/: dubSlice.ts  generateSlice.ts  glossarySlice.ts  index.ts  pillSlice.ts  prefsSlice.ts  uiSlice.ts
frontend/src/ui/: Badge.css  Button.css  Dialog.css  Dialog.jsx  Menu.jsx  Progress.jsx  Segmented.jsx  Slider.css  Slider.jsx  Table.css  Tabs.css  Tabs.jsx  Tooltip.jsx  index.js  themes.css  tokens.css
frontend/src/utils/: constants.js  (+2 more)
legacy_gradio/: ui_local.py
scripts/: bench_incremental.py  capture-screenshots.cjs  desktop-prod.sh  dub_translator_env.sh  install.sh  package.json  package_for_friend.sh  run.sh  seo-backlink-submit.sh  seo-backlink-wave2.sh  seo-backlink-wave3.sh  setup_cudnn.py  smoke-test.sh  start_gemma4_server.sh
tests/: conftest.py  test_api.py  test_capture_ws.py  test_dub_export_bitrate.py  test_dub_export_unique.py  test_dub_pipeline_state.py  test_dub_transcribe.py  test_engines.py  test_job_store.py  test_phase4_services.py  test_router_smoke.py  test_segmentation.py  test_setup_preflight.py  test_subtitle_segmenter.py  test_translator.py
tests/fixtures/: whisper_clean.json  whisper_screenshot.json
tests/frontend/: apiClient.test.mjs  format.test.mjs
(+4 files in other folders)
