[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# First-run backend bootstrap: the PyInstaller backend (~1.5 GB) ships as a
# separate release asset instead of being bundled into the installer so we
# stay under GH Releases' 2 GB per-asset cap on Linux/Windows. ureq handles
# the HTTP GET, flate2 + tar do the extraction of the downloaded tarball.
ureq = "2"
tar = "0.4"
flate2 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
